Adds helpful comment for people who want to run this thing at home