@@ -1,5 +1,7 @@
 This repository contains all the code and slides for my talk "Don't hack the platform? ☠️💣💥"
 
+**NOTE** If you want to run this code, you should add `-Dnet.bytebuddy.experimental=true` to the VM-arguments of `TimeTravelling` and `Victim`, or the trick won't work. This is because when I give this presentation, Java 11 is still in Early Access and ByteBuddy's support for Java 11 is still experimental. Once Java 11 is generally available, ByteBuddy will probably quickly release a version that officially supports it. At that point, you don't need the flag anymore.
+
 You really shouldn't look at this!
 
 But if you do it anyway, [here's the presentation](http://jqno.nl/dont-hack-the-platform-talk/2018-09-12-javazone).
